<resources>
    <string name="app_name">Noctua</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Bem-vindo ao Noctua!</string>
    <string name="User">Usuário</string>
    <string name="Password">Senha</string>
    <string name="UserExmp">exemplo@gmail.com</string>
    <string name="Login">Entrar</string>
    <string name="ForgotPwd">Esqueci minha senha</string>
    <string name="NewUser">Não tem cadastro?</string>
    <string name="title_activity_forgot_pwd">ForgotPwd</string>
    <string name="not_connected">Não foi possível se conectar com o servidor. \n Por favor, tente novamente mais tarde</string>
    <string name="Email">Entre com o e-mail cadastrado</string>
    <string name="EmailExample">exemplo@provedor.com</string>
    <string name="Send">Enviar</string>
    <string name="SomethingWrong">Algo deu errado</string>
    <string name="title_activity_new_user_step1">NewUserStep1</string>
    <string name="Name">Nome</string>
    <string name="NameExample">Maria</string>
    <string name="Surname">Sobrenome</string>
    <string name="SurnameExample">Carvalho</string>
    <string name="Id">CPF</string>
    <string name="Birthday">Data de nascimento</string>
    <string name="BirthdayExample">30/04/1997</string>
    <string name="EmailUser">E-mail</string>
    <string name="Continue">Continuar</string>
    <string name="NameResponsiblePerson">Nome responsável</string>
    <string name="NameResponsibleExample">Guilherme</string>
    <string name="EmailResponsiblePerson">E-mail responsável</string>
    <string name="title_activity_new_user_step2">NewUserStep2</string>
    <string name="Relation">Relacionamento</string>
    <string name="RelationExample">Filho</string>
    <string name="SignOn">Cadastrar</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="UserAlreadyExists">Usuário já existe</string>
    <string name="Cancel">Cancelar</string>
    <string name="Error">Algo deu errado</string>
    <string name="Hello">Olá, </string>
    <string name="Heartbeats">BPM</string>
    <string name="Bloodpression">Pressão arterial</string>
    <string name="Temperature">Temperatura</string>
    <string name="Placeholder">-</string>
    <string name="Diary">Querido diário</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_diary">Diary</string>
    <string name="HowAreU">Come está se sentindo hoje?</string>
    <string name="NOK">Sente algum incômodo?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Register">Cadastro</string>
    <string name="FirstAid">Primeiros Socorros</string>
    <string name="DailyLog">Relatório Diário</string>
    <string name="WeeklyLog">Relatório Semanal</string>
    <string name="MonthlyLog">Relatório Mensal</string>
    <string name="Settings">Configurações</string>
    <string name="LogOut">Sair</string>
    <string name="Logs">Relatórios</string>
    <string name="title_activity_register">Register</string>
    <string name="Responsible">Dados \n Responsável</string>
    <string name="Save">Salvar \n dados</string>
    <string name="title_activity_register_responsible">RegisterResponsible</string>
    <string name="title_activity_password">Password</string>
    <string name="warning_save">Tem certeza de que deseja sair sem salvar?</string>
    <string name="YesFragment">Sair</string>
    <string name="SaveFragment">Salvar</string>
    <string name="title_activity_daily_record">DailyRecord</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_record">Relatórios</string>
    <string name="record_bpm_text">BPM: </string>
    <string name="record_pression_text">Pressão: </string>
    <string name="NotificationTitle">ATENÇÃO</string>
    <string name="RegisterSuccess">Alteração feita com sucesso!</string>
    <string name="IncorrectUser">Senha ou usuário incorretos!</string>
    <string name="CreateNew">Criar usuário</string>
    <string name="NoData">Opa, parece que você não tem nenhum dado a ser mostrado</string>
    <string name="NewUserSuccess">Usuário cadastrado com sucesso</string>
    <string name="Okay">Okay</string>
    <string name="UserExists">Usuário já existe</string>
    <string name="ChangePassword">Sua senha foi enviada para seu e-mail.</string>
    <string name="title_activity_first_aid">FirstAidActivity</string>
    <string name="no_internet">Sem conexão com a internet</string>
    <string name="internet_warning">O dispositivo está sem conexão à internet. \n
        Por favor, conecte-se a internet e tente novamente.</string>
    <string name="no_service_title">Opa, algo deu errado...</string>
    <string name="no_service_text">Não foi possível se conectar com o servidor. \n
        Por favor, tente novamente mais tarde.</string>
    <string name="loading">CARREGANDO</string>
    <string name="basic">Exames primários</string>
</resources>