<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/Logs">
            <menu>
                <item
                    android:id="@+id/navlog_daily"
                    android:icon="@drawable/ic_description_black_24dp"
                    android:title="@string/DailyLog" />
                <item
                    android:id="@+id/navlog_weekly"
                    android:icon="@drawable/ic_description_black_24dp"
                    android:title="@string/WeeklyLog" />

                <item
                    android:id="@+id/navlog_monthly"
                    android:icon="@drawable/ic_description_black_24dp"
                    android:title="@string/MonthlyLog" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/Register" />
        <item
            android:id="@+id/nav_firstAid"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/FirstAid" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/LogOut" />

    </group>

</menu>
