<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gui_f.view.noctua.NewUserStep1Activity"
    tools:showIn="@layout/activity_new_user_step1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignOn"
        android:textSize="15pt"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/NameExample"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Surname"/>

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SurnameExample"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailUser"/>

    <EditText
        android:id="@+id/editEmailNewUsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EmailExample"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Birthday"/>

    <EditText
        android:id="@+id/editBday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/BirthdayExample"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>
</LinearLayout>
