<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gui_f.view.noctua.NewUserStep2Activity"
    tools:showIn="@layout/activity_new_user_step2">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NameResponsiblePerson"/>

    <EditText
        android:id="@+id/editNameResponsible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/NameResponsibleExample"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailResponsiblePerson"/>

    <EditText
        android:id="@+id/editEmailResponsible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EmailExample"
        android:inputType="textEmailAddress"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Relation"/>

    <EditText
        android:id="@+id/editRelation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/RelationExample"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSignOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignOn"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>
</LinearLayout>
