<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gui_f.view.noctua.Activity.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:background="@color/backgroundColour"
    android:scrollbars="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <EditText
        android:id="@+id/editRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="left"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColour"
        android:text="@string/Surname"
        android:textSize="10pt"/>

    <EditText
        android:id="@+id/editRegisterSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="left"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailUser"
        android:textColor="@color/textColour"
        android:textSize="10pt"/>

    <EditText
        android:id="@+id/editRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="left"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Birthday"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <EditText
        android:id="@+id/editRegisterBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="left"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnRegisterSave"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Save"
        android:textSize="10pt"
        android:background="@drawable/button_shape"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"/>
    <Button
        android:id="@+id/btnRegisterResp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Responsible"
        android:textSize="10pt"
        android:background="@drawable/button_shape"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
