<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gui_f.view.noctua.Diary"
    tools:showIn="@layout/activity_diary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Diary"
        android:textSize="10pt"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HowAreU"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--TODO: colocar imagens -->

        <ImageView
            android:id="@+id/imgGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/imgNotSo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"/>

        <ImageView
            android:id="@+id/imgBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NOK"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/editDiary"
        android:layout_width="550px"
        android:layout_height="200px" />


    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSendDiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>
