<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gui_f.UpdateUser.Presenter.RegisterResponsibleActivity"
    tools:showIn="@layout/activity_register_responsible"
    android:background="@color/backgroundColour">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:backgroundTint="@color/toolbarColour"/>

    </android.support.design.widget.AppBarLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NameResponsiblePerson"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <EditText
        android:id="@+id/editNameResponsibleRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="10pt"
        android:textColor="@color/textColour" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailResponsiblePerson"
        android:textColor="@color/textColour"
        android:textSize="10pt"/>

    <EditText
        android:id="@+id/editEmailResponsibleRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Relation"
        android:textSize="10pt"
        android:textColor="@color/textColour"/>

    <EditText
        android:id="@+id/editRelationRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/textColour"
        android:textSize="10pt"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnRespRegisterSave"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Save"
        android:textSize="10pt"
        android:background="@drawable/button_shape"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>
